--- a/src/templates/app/recipe/form.phtml
+++ b/src/templates/app/recipe/form.phtml
@@ -13,6 +13,7 @@
             'entity' => 'recipe',
             'btnBack' => '/app/recipes',
             'btnSave' => true,
+            'btnSaveAndGenerate' => true,
             'menu' => $menu,
             'breadcumb' => $breadcumb
         ]
