--- a/src/templates/app/pdf/booklet/booklet.phtml
+++ b/src/templates/app/pdf/booklet/booklet.phtml
@@ -244,7 +244,7 @@ $layouts[9] = ['3_1', '3_2', '6_5', '6_6']; // 1/3 + 1/3 + 1/3x2
             <div class="visible-area">
                 <?php if (!empty($booklet['pages'][$page]['image'])): ?>
                     <div class="bg-image">
-                        <img class="bg-image-img" src='<?php echo $booklet['pages'][1]['image'] ?>'>
+                        <img class="bg-image-img" src='<?php echo $booklet['pages'][$page]['image'] ?>'>
                     </div>
                 <?php else: ?>
                     <?php $currentLayout = $booklet['page' . $page . '_booklet_layout_id']; ?>
